Fix sharing layout on iOS

--- a/src/components/share/Share.scss
+++ b/src/components/share/Share.scss
@@ -6,7 +6,7 @@
 
   position: fixed;
   top: 50%;
-  left: 50px;
+  left: 2vw;
   z-index: 100;
 
   transform: translateY(-50%);
@@ -20,6 +20,9 @@
     align-items: center;
     justify-content: center;
 
+    position: relative;
+
+    padding: 0;
     margin-bottom: 25px;
 
     width: 44px;
@@ -39,6 +42,10 @@
 
     path { // stylelint-disable-line
       fill: #fff;
+    }
+
+    > svg {
+      position: absolute;
     }
   }
 
